Prepare for web api implementation
