# cmd/medicine-api-service/main.go
@@ -1,12 +1,16 @@
 package main
 
 import (
+	"context"
+	"github.com/gin-contrib/cors"
 	"github.com/gin-gonic/gin"
 	"github.com/undy45/medicine-webapi/api"
+	"github.com/undy45/medicine-webapi/internal/db_service"
 	"github.com/undy45/medicine-webapi/internal/medicine"
 	"log"
 	"os"
 	"strings"
+	"time"
 )
 
 func main() {
@@ -21,11 +25,29 @@ func main() {
 	}
 	engine := gin.New()
 	engine.Use(gin.Recovery())
+	corsMiddleware := cors.New(cors.Config{
+		AllowOrigins:     []string{"*"},
+		AllowMethods:     []string{"GET", "PUT", "POST", "DELETE", "PATCH"},
+		AllowHeaders:     []string{"Origin", "Authorization", "Content-Type"},
+		ExposeHeaders:    []string{""},
+		AllowCredentials: false,
+		MaxAge:           12 * time.Hour,
+	})
+	engine.Use(corsMiddleware)
+
+	// setup context update  middleware
+	dbService := db_service.NewMongoService[medicine.Ambulance](db_service.MongoServiceConfig{})
+	defer dbService.Disconnect(context.Background())
+	engine.Use(func(ctx *gin.Context) {
+		ctx.Set("db_service", dbService)
+		ctx.Next()
+	})
 	// request routings
 	handleFunctions := &medicine.ApiHandleFunctions{
 		OrderStatusesAPI:     medicine.NewOrderStatusesApi(),
 		MedicineInventoryAPI: medicine.NewMedicineInventoryAPI(),
 		MedicineOrderAPI:     medicine.NewMedicineOrderAPI(),
+		AmbulancesAPI:        medicine.NewAmbulancesAPI(),
 	}
 	medicine.NewRouterWithGinEngine(engine, *handleFunctions)
 	engine.GET("/openapi", api.HandleOpenApi)
