# internal/medicine/model_ambulance.go
@@ -1,0 +1,26 @@
+/*
+ * Medicine Inventory API
+ *
+ * Medicine inventory management for Web-In-Cloud system
+ *
+ * API version: 1.0.0
+ * Contact: your_email@stuba.sk
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package medicine
+
+type Ambulance struct {
+
+	// Unique identifier of the ambulance
+	Id string `json:"id"`
+
+	// Human readable display name of the ambulance
+	Name string `json:"name"`
+
+	RoomNumber string `json:"roomNumber"`
+
+	MedicineInventory []MedicineInventoryEntry `json:"medicineInventory,omitempty"`
+
+	MedicineOrders []MedicineOrderEntry `json:"medicineOrders,omitempty"`
+}
